--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fantasyfootball",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rksnyder7.github.io/",
+  "homepage": "https://rksnyder7.github.io/rksnyder7",
   "dependencies": {
     "bootstrap3": "^3.3.5",
     "gh-pages": "^1.2.0",
